2004-07-30  Zoltan Varga  <vargaz@freemail.hu>

	* mono-logger.c (mono_trace_set_mask_string): Fix AOT tracing constant.

2004-07-28  Zoltan Varga  <vargaz@freemail.hu>

	* mono-codeman.c (mono_code_manager_invalidate): Invalidate with
	x86 break on AMD64 too.

2004-07-23  zovarga  <vargaz@freemail.hu>

	* monobitset.c (my_g_bit_nth_msf): Add workaround for glib 2.2 bug on
	64 bit platforms.

2004-07-09  Ben Maurer  <bmaurer@ximain.com>
	
	* mono-hash.c: register gc roots

2004-07-02  Zoltan Varga  <vargaz@freemail.hu>

	* mono-logger.h mono-logger.c: Added AOT component.

2004-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* strtod.c: Use gint32 for 32 bit types.

2004-06-29  Zoltan Varga  <vargaz@freemail.hu>

	* mono-sha1.c: Use gint32 for 32 types. Fixes random memory corruption
	in SHA1Transform on 64 bit systems.

2004-06-24  David Waite  <mass@akuma.org>

	* monobitset.c: change to C90-style comments from C99/C++-style 

2004-06-21  Atsushi Enomoto  <atsushi@ximian.com>

	* mono-sha1.c : close opened file in case of successful read. This
	  saves a bunch of System.Reflection Emit failures under windows.

2004-06-18  Jackson Harper  <jackson@ximian.com>

	* mono-logger.c/h: Add a trace mask option for tracing loading
	config files. A little white space love.
	
2004-06-18  Jackson Harper  <jackson@ximian.com>

	* mono-logger.c: Change default logging level to ERROR. Make sure
	that mono_trace_init is called if mono_tracev is our first trace
	statement is mono_tracev. Little indentation fix.
	
2004-05-25  Zoltan Varga  <vargaz@freemail.hu>

	* mono-codeman.c (mono_code_manager_invalidate): On x86, fill the
	memory with 0xcc (x86 break).

2004-05-02  Miguel de Icaza  <miguel@ximian.com>

	* mono-sha1.c: MacOS X defines "LITTLE_ENDIAN", you are supposed
	to test against BYTE_ORDER, and this caused trouble.  We now use
	G_BYTE_ORDER and G_LITTLE_ENDIAN.  This should fix the MacOS woes.

2004-04-26  David Waite  <mass@akuma.org>
