@@ -4,6 +4,7 @@
 typedef struct _MonoCodeManager MonoCodeManager;
 
 MonoCodeManager* mono_code_manager_new     (void);
+MonoCodeManager* mono_code_manager_new_dynamic (void);
 void             mono_code_manager_destroy (MonoCodeManager *cman);
 void             mono_code_manager_invalidate (MonoCodeManager *cman);
 
